@@ -1,5 +1,14 @@
 2010-02-25  Abel Cheung  <abelcheung@gmail.com>
 
+	* Initial shortcode support.
+	* Fix comment rendering limitation bug.
+	* wp-scorerender.php:
+	- (scorerender_shortcode_unsupported) New func.
+	- (scorerender_shortcode_handler) New func.
+	- (scorerender_parse_shortcode) New func.
+
+2010-02-25  Abel Cheung  <abelcheung@gmail.com>
+
 	* scorerender-shortcode.php:
 	- New file, taken from WP 2.9.2 as a replacement of shortcode API
 	  because 2.6-2.7 one is not good enough to use.
@@ -7,8 +16,7 @@
 2010-02-25  Abel Cheung  <abelcheung@gmail.com>
 
 	* *.php, notation/*.php:
-	- The abstract class on which notations are based is renamed to
-	  SrNotationBase. 
+	- Rename ScoreRender class to SrNotationBase. 
 
 2010-02-24  Abel Cheung  <abelcheung@gmail.com>
 
